--- a/{{cookiecutter.repo_name}}/templates/CHANGELOG.md.j2
+++ b/{{cookiecutter.repo_name}}/templates/CHANGELOG.md.j2
@@ -1,3 +1,7 @@
+{% macro fmt_commit(commit) -%}
+{#- Use only the scope from commit summary, remove parentheses and tag. -#}
+{{ commit.commit.summary.rstrip().split(':')[0].split('(')[-1].replace(')','') }}:{{ ':'.join(commit.commit.summary.split(':')[1:]) }} ([`{{ commit.short_hash }}`]({{ commit.hexsha | commit_hash_url }}))
+{%- endmacro -%}
 # CHANGELOG
 {% if context.history.unreleased | length > 0 %}
 {# UNRELEASED -#}
@@ -5,9 +9,9 @@
 {% for type_, commits in context.history.unreleased | dictsort %}
 ### {{ type_ | capitalize }}
 {% for commit in commits %}{% if type_ != "unknown" %}
-* {{ commit.commit.summary.rstrip() }} ([`{{ commit.short_hash }}`]({{ commit.hexsha | commit_hash_url }}))
+* {{ fmt_commit(commit) }}
 {% else %}
-* {{ commit.commit.summary.rstrip() }} ([`{{ commit.short_hash }}`]({{ commit.hexsha | commit_hash_url }}))
+* {{ fmt_commit(commit) }}
 {% endif %}{% endfor %}{% endfor %}{% endif -%}
 {% for version, release in context.history.released.items() -%}
 {# RELEASED -#}
@@ -16,7 +20,7 @@
 {% for type_, commits in release["elements"] | dictsort %}
 ### {{ type_ | capitalize }}
 {% for commit in commits %}{% if type_ != "unknown" %}
-* {{ commit.commit.summary.rstrip() }} ([`{{ commit.short_hash }}`]({{ commit.hexsha | commit_hash_url }}))
+* {{ fmt_commit(commit) }}
 {% else %}
-* {{ commit.commit.summary.rstrip() }} ([`{{ commit.short_hash }}`]({{ commit.hexsha | commit_hash_url }}))
+* {{ fmt_commit(commit) }}
 {% endif %}{% endfor %}{% endfor %}{% endif %}{% endfor %}
