--- a/{{cookiecutter.repo_name}}/templates/CHANGELOG.md.j2
+++ b/{{cookiecutter.repo_name}}/templates/CHANGELOG.md.j2
@@ -1,6 +1,10 @@
 {% macro fmt_commit(commit) -%}
 {#- Use only the scope from commit summary, remove parentheses and tag. -#}
-{{ commit.commit.summary.rstrip().split(':')[0].split('(')[-1].replace(')','') }}:{{ ':'.join(commit.commit.summary.split(':')[1:]) }} ([`{{ commit.short_hash }}`]({{ commit.hexsha | commit_hash_url }}))
+{%- if commit.scope -%}
+{{ commit.scope }}: {{ commit.descriptions[0] }}
+{%- else -%}
+{{ commit.commit.summary.rstrip() }}
+{%- endif %} ([`{{ commit.short_hash }}`]({{ commit.hexsha | commit_hash_url }}))
 {%- endmacro -%}
 # CHANGELOG
 {% if context.history.unreleased | length > 0 %}
